--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
   </head>
 
   <body>
+   <% if user_signed_in? %>
    <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
       <%= link_to 'Bug Tracking App', root_path, class: 'navbar-brand' %>
@@ -42,7 +43,7 @@
       </div>
     </div>
   </nav>
-
+<% end %>
    <p class="notice"><%= notice %></p>
        <p class="alert"><%= alert %></p>
 
