--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,8 +1,18 @@
 <h2>Projects</h2>
+
 <% @projects.each do |project| %>
-    <h1>hello</h1>
-    <h2><%= project.name %></h2>
-    <p><strong>Manager:</strong> <%= project.manager.name %></p>
+    <% if current_user.manager? %>
+        <%= link_to 'Create New Project', new_project_path(@project) %> | 
+        <%= link_to 'Edit Project', edit_project_path(project) %> | 
+        <%= link_to 'Delete Project', delete_project_path(project), method: :delete, data: { confirm: 'Are you sure you want to delete this project?' } %>
+    <% end %>
+    
+    <h2><strong>Title:</strong><%= project.name %></h2>
+    <p><strong>Description:</strong> <%= project.description %></p> 
+
+     <% if current_user.qa? %>
+        <%= link_to 'Add Bug', new_bug_path(@project) %>
+    <% end %>
 
     <h3>Developers</h3>
     <ul>
@@ -17,22 +27,4 @@
         <li><%= qa.name %> (<%= link_to 'Remove', remove_qa_from_project_path(project, user_id: qa.id), method: :delete, data: { confirm: 'Are you sure?' } %>)</li>
     <% end %>
     </ul>
-
-    <h3>Add Developer</h3>
-    <%= form_tag add_developer_to_project_path(project), method: :post do %>
-    <%= select_tag :user_id, options_from_collection_for_select(User.developers, :id, :name) %>
-    <%= submit_tag 'Add Developer' %>
-    <% end %>
-
-    <h3>Add QA</h3>
-    <%= form_tag add_qa_to_project_path(project), method: :post do %>
-    <%= select_tag :user_id, options_from_collection_for_select(User.qas, :id, :name) %>
-    <%= submit_tag 'Add QA' %>
-    <% end %>
-
-    <% if current_user.manager? && current_user == project.manager %>
-    <%= link_to 'Edit Project', edit_project_path(project) %>
-    <%= link_to 'Delete Project', project_path(project), method: :delete, data: { confirm: 'Are you sure?' } %>
-    <% end %>
-   
 <% end %>
