--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,30 +1,42 @@
-<h2>Projects</h2>
 
-<% @projects.each do |project| %>
-    <% if current_user.manager? %>
-        <%= link_to 'Create New Project', new_project_path(@project) %> | 
-        <%= link_to 'Edit Project', edit_project_path(project) %> | 
-        <%= link_to 'Delete Project', delete_project_path(project), method: :delete, data: { confirm: 'Are you sure you want to delete this project?' } %>
-    <% end %>
-    
-    <h2><strong>Title:</strong><%= project.name %></h2>
-    <p><strong>Description:</strong> <%= project.description %></p> 
 
-     <% if current_user.qa? %>
-        <%= link_to 'Add Bug', new_bug_path(@project) %>
-    <% end %>
 
-    <h3>Developers</h3>
-    <ul>
-    <% project.users.developer.each do |developer| %>
-        <li><%= developer.name %> (<%= link_to 'Remove', remove_developer_from_project_path(project, user_id: developer.id), method: :delete, data: { confirm: 'Are you sure?' } %>)</li>
-    <% end %>
-    </ul>
+<div class="container mt-5">
+  <h2 class="mb-4">Projects</h2>
+  <% @projects.each do |project| %>
+    <div class="card mb-4">
+      <div class="card-body">
+        <% if current_user.manager? %>
+          <div class="mb-2">
+            <%= link_to 'Create New Project', new_project_path(@project), class: "btn btn-primary mr-2" %>
+            <%= link_to 'Edit Project', edit_project_path(project), class: "btn btn-warning mr-2" %>
+            <%= link_to 'Delete Project', delete_project_path(project), method: :delete, data: { confirm: 'Are you sure you want to delete this project?' }, class: "btn btn-danger" %>
+          </div>
+        <% end %>
+        
+        <h2><strong>Title:</strong> <%= project.name %></h2>
+        <p><strong>Description:</strong> <%= project.description %></p> 
 
-    <h3>QAs</h3>
-    <ul>
-    <% project.users.qa.each do |qa| %>
-        <li><%= qa.name %> (<%= link_to 'Remove', remove_qa_from_project_path(project, user_id: qa.id), method: :delete, data: { confirm: 'Are you sure?' } %>)</li>
-    <% end %>
-    </ul>
-<% end %>
+        <% if current_user.qa? %>
+          <%= link_to 'Add Bug', new_bug_path(@project), class: "btn btn-success" %>
+        <% end %>
+
+        <h3>Developers</h3>
+        <ul>
+        <% project.users.developer.each do |developer| %>
+          <li><%= developer.name %> (<%= link_to 'Remove', remove_developer_from_project_path(project, user_id: developer.id), method: :delete, data: { confirm: 'Are you sure?' }, class: "text-danger" %>)</li>
+        <% end %>
+        </ul>
+
+        <h3>QAs</h3>
+        <ul>
+        <% project.users.qa.each do |qa| %>
+          <li><%= qa.name %> (<%= link_to 'Remove', remove_qa_from_project_path(project, user_id: qa.id), method: :delete, data: { confirm: 'Are you sure?' }, class: "text-danger" %>)</li>
+        <% end %>
+        </ul>
+      </div>
+    </div>
+  <% end %>
+</div>
+
+
