--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,14 +1,21 @@
-
-
-
-<div class="container mt-5">
-  <h2 class="mb-4">Projects</h2>
+<div class="container mt-5 text-center">
+  <h2 class="mb-4">List of All Projects</h2>
+    <% if current_user.manager? %>
+    <div class="mb-2">
+    <%= link_to 'Create New Project', new_project_path(@project), class: "btn btn-primary mr-2" %>
+    <%= link_to 'Add Dev', new_user_registration_path(@project), class: "btn btn-primary mr-2" %>
+     
+      </td>
+      </td>
+    <% end %>
   <% @projects.each do |project| %>
     <div class="card mb-4">
       <div class="card-body">
         <% if current_user.manager? %>
+        
+        
           <div class="mb-2">
-            <%= link_to 'Create New Project', new_project_path(@project), class: "btn btn-primary mr-2" %>
+            
             <%= link_to 'Edit Project', edit_project_path(project), class: "btn btn-warning mr-2" %>
             <%= link_to 'Delete Project', delete_project_path(project), method: :delete, data: { confirm: 'Are you sure you want to delete this project?' }, class: "btn btn-danger" %>
           </div>
@@ -38,5 +45,3 @@
     </div>
   <% end %>
 </div>
-
-
