--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,15 +1,25 @@
-<h1>Create New Project</h1>
-
-<%= form_for @project do |f| %>
-  <div class="field">
-    <%= f.label :name %>
-  <%= f.text_field :name %>
+<div class="container mt-5">
+  <h1 class="text-center">Create New Project</h1>
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <div class="card">
+        <div class="card-body">
+          <%= form_for @project do |f| %>
+            <div class="form-group">
+              <%= f.label :name %>
+              <%= f.text_field :name, class: "form-control", required: true %>
+            </div>
+            <div class="form-group">
+              <%= f.label :description %>
+              <%= f.text_area :description, class: "form-control", rows: 5 %>
+            </div>
+            <div class="form-group text-center">
+              <%= f.submit 'Create Project', class: "btn btn-primary btn-block" %>
+            </div>
+          <% end %>
+          <%= link_to 'Back to Projects', projects_path, class: "btn btn-secondary btn-block" %>
+        </div>
+      </div>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :description %>
-    <%= f.text_area :description %>
-  </div>
-  <%= f.submit 'Create Project' %>
-<% end %>
-
-<%= link_to 'Back to Projects', projects_path %>
+</div>
