--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,9 +25,10 @@
           <li class="nav-item">
             <%= link_to 'Projects', projects_path, class: 'nav-link' %>
           </li>
-          <li class="nav-item">
-            <%= link_to 'Bugs', bugs_path, class: 'nav-link' %>
-          </li>
+          <%# <li class="nav-item">
+          <%= link_to 'Bugs', projects_bugs_path, class: 'nav-link' %>
+
+          <%# </li>  %>
           <% if user_signed_in? %>
             <li class="nav-item">
               <%= button_to "Logout", destroy_user_session_path, method: :delete, class: 'btn btn-link nav-link' %>
