--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,32 +1,28 @@
 <div class="container mt-5 text-center">
   <h2 class="mb-4">List of All Projects</h2>
+  <%= link_to 'Create New Project', new_project_path(@project), class: "btn btn-primary mr-2" %>
+
     <% @projects.each do |project| %>
-    <% if current_user.manager? %>
-    <div class="mb-2">
-    <%= link_to 'Create New Project', new_project_path(project), class: "btn btn-primary mr-2" %>
-    <%= link_to 'Add DEV', add_developer_project_path(project), class: "btn btn-primary mr-2" %>
-     <%= link_to 'Add QA', add_qa_project_path(project), class: "btn btn-primary mr-2" %>
-     <%= link_to 'Remove DEV', new_user_registration_path(project), class: "btn btn-primary mr-2" %>
-     <%= link_to 'Remove QA', new_user_registration_path(project), class: "btn btn-primary mr-2" %>
-      </td>
-      </td>
-    <% end %>
 
     <div class="card mb-4">
       <div class="card-body">
         <% if current_user.manager? %>
-        
-        
-          <div class="mb-2">
-            
-            <%= link_to 'Edit Project', edit_project_path(project), class: "btn btn-warning mr-2" %>
-            <%= link_to 'Delete Project', delete_project_path(project), method: :delete, data: { confirm: 'Are you sure you want to delete this project?' }, class: "btn btn-danger" %>
-          </div>
+          <%= link_to 'Add DEV', add_developer_project_path(project), class: "btn btn-primary mr-2" %>
+          <%= link_to 'Add QA', add_qa_project_path(project), class: "btn btn-primary mr-2" %>
+          <%= link_to 'Remove DEV', delete_developers_project_path(project), class: "btn btn-primary mr-2" %>
+          <%= link_to 'Remove QA', new_user_registration_path(project), class: "btn btn-primary mr-2" %>
         <% end %>
         
         <h2><strong>Title:</strong> <%= project.name %></h2>
         <p><strong>Description:</strong> <%= project.description %></p> 
 
+        <% if current_user.manager? %>
+         <div class="mb-2">  
+            <%= link_to 'Edit Project', edit_project_path(project), class: "btn btn-warning mr-2" %>
+            <%= link_to 'Delete Project', delete_project_path(project), method: :delete, data: { confirm: 'Are you sure you want to delete this project?' }, class: "btn btn-danger" %>
+          </div>
+        <% end %>
+        
         <% if current_user.qa? %>
           <%= link_to 'Add Bug', new_bug_path(@project), class: "btn btn-success" %>
         <% end %>
